Conversation pairs ready

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Exercise 2/.ipynb_checkpoints/
 Exercise 2/conversations.pkl
 Exercise 2/cornell_movie_dialogs_corpus.zip
+Exercise 2/data/conversations.pkl
