--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Exercise 2/.ipynb_checkpoints/
 Exercise 2/conversations.pkl
 Exercise 2/cornell_movie_dialogs_corpus.zip
 Exercise 2/data/conversations.pkl
+Exercise 2/data/glove.6B.100d.txt
